# dotfiles

./: .Xmodmap  .aspell.en.pws  .bash_aliases  .bash_history  .bashrc  .gitattributes  .gitignore  .ispell_default  .latexmkrc  .mayu  .prh.yml  .profile  .rsense  .screenrc  .tmux.conf  .yatexrc  .zsh_aliases  .zshrc  CNAME  Makefile  README.md  README.org  azik_full.txt  bootstrap.sh  clink_inputrc  dot.ahk  dot.nodoka  ie-editor.reg  initial_setting.bat  initial_setting.sh  keyboard-scanmap.reg  link.bash  mayurc  mozc-dictionary.txt  mozc-keyconfig.txt  mozc-romaji_table.txt  new.sh  profile.ps1  proxy.pac  ps_alias.ps1  (+5 more)
.bash.d/: 00_helper.bash  10_config.bash  (+2 more)
ansible/: .ansible-lint  .gitignore  .yamllint  Pipfile  WslAnsible.bat  ansible.cfg  config.yml  hosts  hosts.sh  private_vars.yml.sample  pyproject.toml  requirements.yml  site.yml  test.yml  test_hosts.ini  wsl.yml
ansible/group_vars/all/: 00_runtime.yml  git.yml  proxy.yml.sample  symlink_configs.yml  zz_private.yml.sample
ansible/group_vars/windows10/: credential.yml.sample  starship.yml
ansible/group_vars/wsl/: starship.yml
ansible/host_vars/: sample.yml
ansible/roles/dev_ubuntu/files/: runtime-icon.sh
ansible/roles/dev_ubuntu/handlers/: main.yml
ansible/roles/dev_ubuntu/tasks/: add_apt_key.yml  install_ghq.yml  install_hackgen.yml  main.yml  validate_precondition.yml
ansible/roles/local-proxy/tasks/: main.yml
ansible/roles/local_proxy/tasks/: main.yml
ansible/roles/starship/tasks/: main.yml
ansible/roles/starship/templates/: starship.toml.j2
ansible/roles/windows/tasks/: link_config_dir.yml  link_config_file.yml  main.yml  pin_to_taskbar.yml  pwsh_module.yml  validate_precondition.yml  win_git.yml  windows_config.yml
ansible/roles/windows/templates/: TaskBarLayout.xml.j2
ansible/roles/windows10/files/: PinToTaskBar.ps1
ansible/roles/windows10/tasks/: emacs_context_menu.yml  git_config.yml  ie_favorites.yml  link_config_dir.yml  link_config_file.yml  main.yml  pin_to_taskbar.yml  pwsh_module.yml  validate_precondition.yml  windows_config.yml
ansible/roles/wsl/files/: detect-wsl-gateway.sh  ssh-agent.sh
ansible/roles/wsl/handlers/: main.yml
ansible/roles/wsl/tasks/: install_ghq.yml  install_hackgen.yml  main.yml
ansible/tasks/: link_config_dir.yml  link_config_file.yml
(+134 files in other folders)
