[tool.poetry]
name = "my-ansible-roles"
version = "0.1.0"
description = "My Ansible Roles"
authors = ["Tsunenobu Kai <kai2nenobu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
ansible = "^3.1.0"
pywinrm = "^0.4.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.5.1"
ansible-lint = "^5.0.2"
yamllint = "^1.26.0"

[tool.taskipy.tasks]
apply = "ansible-playbook --vault-password-file ~/.ansible_vault_pass -i hosts.sh site.yml"
lint = "ansible-lint site.yml"
encrypt = "ansible-vault encrypt_string --vault-password-file ~/.ansible_vault_pass"
ping = "ansible -m ping -i hosts.sh wsl && ansible -m win_ping --vault-password-file ~/.ansible_vault_pass -i hosts.sh windows"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
